--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,14 @@
   <div class="dropdown">
       <ul class="dropdown-menu">
         <li><a routerLinkActive="active" 
-          routerLink="/grades">Employee Grades</a></li>
+          routerLink="/grades">Employee Grades</a>
+        </li>
         <li> <a routerLinkActive="active" 
-          routerLink="/deptno">Employee DeptNo</a></li>
+          routerLink="/deptno">Employee DeptNo</a>
+        </li>
+        <li> <a routerLinkActive="active" 
+          routerLink="/slice">Employee Slice</a>
+        </li>
       </ul>
   </div>
   <router-outlet></router-outlet>
